fixed font size on smaller screens

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ section{
 }
 
 .section-header{
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-weight: 600;
   font-size: 2rem;
 }
@@ -79,7 +79,7 @@ section{
       margin-inline: 1rem;
     } */
     .main-section-paragraph{
-      font-size: 1.2rem;
+      font-size: 1.3rem;
     }
 
     .section-paragraph{
